Bug 354793 - Brush settings panel deformed after installing .abr files
Summary: Brush settings panel deformed after installing .abr files
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 2.9.7
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL: http://pre02.deviantart.net/88af/th/p...
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-03 14:07 UTC by kaerhon
Modified: 2018-02-07 16:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kaerhon 2015-11-03 14:07:37 UTC
After installing some .abr brushes, i got the brush editing window deformed as shown on the picture url. Note the preset icons, at the top, that are deformed as well. (that changes when i change the brush engine, some are wider, some are squares, some are taller). The predefined tips thumbnails also are bigger than usual.
The picture is taken after deleting the suspected .abr file in its folder. I re-installed it to check tag length, and it didn't seem to be long enough to justify such a window deformation

The deformed window is problematic in the fact that i can't have access to the right part, as it's out of the screen.

I solved the issue by deleting /home/me/.kde/share/apps/krita folder

After trying to reproduce the issue by reinstalling the .abr file in a "clean" setup, the window stays at the right size. So i can't reproduce..

The suspected .abr file :
http://orig00.deviantart.net/da21/f/2012/040/1/6/all_my_brushes_by_poppin4bre973-d4p627s.abr

Reproducible: Couldn't Reproduce

Steps to Reproduce:
1.Install the linked .abr file
2.Notice the brush settings window going wild


Actual Results:  
The brush settings window is wider, and gets out of the screen on the right, presets are deformed, predefined brush thumbnails are bigger

Expected Results:  
The brush setting window should stay at it's size

I've got a 3/4 screen with 1280x1024 resolution
i installed some other brush packs before (.gbr and .abr), but with no issue
Comment 1 Halla Rempt 2016-03-31 00:10:21 UTC
Hi Kaerhon,

I'm afraid that I cannot reproduce this with the current git master build (3.0), the items in the brush selector now keep to their maximum size. I have to admit I'm testing on a big monitor, though. Can you still reproduce with a recent 3.0 build?
Comment 2 Halla Rempt 2016-03-31 00:11:30 UTC
Wait.. I got it. It's not the brush selector, it's the tag combobox. That gets as wide as the abr file name.
Comment 3 kaerhon 2016-04-07 17:06:32 UTC
i can't reproduce it with 3.0, it seems to work fine
Comment 4 Halla Rempt 2018-01-24 13:28:30 UTC
Git commit 21723b8800d6961fa70336e42c2cc22b66210ff2 by Boudewijn Rempt.
Committed on 24/01/2018 at 13:07.
Pushed by rempt into branch 'master'.

Move squeezedcombobox from libs/ui/widgets to widgets

Now we can try to use it in the tagging combobox

M  +0    -1    libs/ui/CMakeLists.txt
M  +1    -1    libs/ui/dialogs/kis_dlg_image_properties.cc
M  +1    -1    libs/ui/dialogs/kis_dlg_png_import.cpp
M  +1    -1    libs/ui/dialogs/kis_dlg_preferences.cc
M  +1    -1    libs/ui/dialogs/kis_dlg_preferences.h
M  +1    -1    libs/ui/dialogs/kis_dlg_stroke_selection_properties.cpp
M  +1    -1    libs/ui/forms/wdgdlgpngimport.ui
M  +0    -1    libs/ui/tests/CMakeLists.txt
M  +1    -1    libs/ui/widgets/kis_custom_image_widget.cc
M  +1    -1    libs/ui/widgets/kis_image_from_clipboard_widget.cpp
M  +2    -0    libs/widgets/CMakeLists.txt
M  +3    -2    libs/widgets/KoResourceTaggingManager.cpp
R  +1    -2    libs/widgets/squeezedcombobox.cpp [from: libs/ui/widgets/squeezedcombobox.cpp - 098% similarity]
R  +3    -5    libs/widgets/squeezedcombobox.h [from: libs/ui/widgets/squeezedcombobox.h - 097% similarity]
M  +1    -0    libs/widgets/tests/CMakeLists.txt
R  +1    -1    libs/widgets/tests/squeezedcombobox_test.cpp [from: libs/ui/tests/squeezedcombobox_test.cpp - 094% similarity]
R  +0    -0    libs/widgets/tests/squeezedcombobox_test.h [from: libs/ui/tests/squeezedcombobox_test.h - 100% similarity]
M  +1    -1    plugins/dockers/lut/lutdocker_dock.cpp
M  +1    -1    plugins/extensions/colorspaceconversion/dlg_colorspaceconversion.cc

https://commits.kde.org/krita/21723b8800d6961fa70336e42c2cc22b66210ff2
Comment 5 Halla Rempt 2018-02-07 16:02:41 UTC
Fixed in 

commit ff2291db2081ee459d39a0ebcc2d776291594d2c
Author: Boudewijn Rempt <boud@valdyas.org>
Date:   Wed Jan 24 14:27:30 2018 +0100

    Use the squeezed combobox in KoTagChooserWidget