Use the squeezed combobox in KoTagChooserWidget

BUG:354793